--- a/laravelssoclient/.env
+++ b/laravelssoclient/.env
@@ -2,18 +2,18 @@ APP_NAME="SSO Client"
 APP_ENV=local
 APP_KEY=base64:GvhfmxwaqlfEmWNdiYywn5n9Bjpddti9Bf9yXaFwvsk=
 APP_DEBUG=true
-APP_URL=http://localhost:8080
+APP_URL=https://ssoproject-serviceprovider.codingtime.dev
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=sso_client
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u306215934_itlaw_2
+DB_USERNAME=u306215934_itlaw_2
+DB_PASSWORD="AmY!ec$1"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -57,8 +57,8 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SSO_CLIENT_ID="97c9ef9f-f2ab-4308-b302-3992754c8406"
-SSO_CLIENT_SECRET="MTM7LtIIawEFlsXuL68LBmrzN57WkUFt6kKFit7r"
-SSO_CLIENT_CALLBACK="http://127.0.0.1:8080/callback"
+SSO_CLIENT_ID="97ca5aae-1eaa-4c3e-84c4-6f812980552c"
+SSO_CLIENT_SECRET="oaf42r8wipVNSOSXf7Ar5qA4dHnwWLFX70IzXNTv"
+SSO_CLIENT_CALLBACK="https://ssoproject-serviceprovider.codingtime.dev/callback"
 SSO_SCOPES="view-user "
-SSO_HOST="http://127.0.0.1:8000"
+SSO_HOST="https://ssoproject-identityprovider.codingtime.dev"
