--- a/laravelsso/.env
+++ b/laravelsso/.env
@@ -2,18 +2,18 @@ APP_NAME="OAuth 2.0 SSO"
 APP_ENV=local
 APP_KEY=base64:k5QtvlF93HFXek036h2T5xwfCE5flg3aYsyr4mf776M=
 APP_DEBUG=true
-APP_URL=https://ssoproject-identityprovider.codingtime.dev
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=u306215934_itlaw_3
-DB_USERNAME=u306215934_itlaw_3
-DB_PASSWORD="AmY!ec$1"
+DB_DATABASE=server
+DB_USERNAME=root
+DB_PASSWORD="password"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
