--- a/laravelssoclient/.env
+++ b/laravelssoclient/.env
@@ -2,18 +2,18 @@ APP_NAME="SSO Client"
 APP_ENV=local
 APP_KEY=base64:GvhfmxwaqlfEmWNdiYywn5n9Bjpddti9Bf9yXaFwvsk=
 APP_DEBUG=true
-APP_URL=https://ssoproject-serviceprovider.codingtime.dev
+APP_URL=http://localhost:8080
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=u306215934_itlaw_2
-DB_USERNAME=u306215934_itlaw_2
-DB_PASSWORD="AmY!ec$1"
+DB_DATABASE=client
+DB_USERNAME=root
+DB_PASSWORD="password"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -57,8 +57,10 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SSO_CLIENT_ID="97ca5aae-1eaa-4c3e-84c4-6f812980552c"
-SSO_CLIENT_SECRET="oaf42r8wipVNSOSXf7Ar5qA4dHnwWLFX70IzXNTv"
-SSO_CLIENT_CALLBACK="https://ssoproject-serviceprovider.codingtime.dev/callback"
+# นำ passport ที่ได้ generate มาแก้ตรงนี้
+SSO_CLIENT_ID=
+SSO_CLIENT_SECRET=
+
+SSO_CLIENT_CALLBACK="http://127.0.0.1:8080/callback"
 SSO_SCOPES="view-user "
-SSO_HOST="https://ssoproject-identityprovider.codingtime.dev"
+SSO_HOST="http://localhost:8000"
